--- a/src/components/Drawer/__stories__/ResizableItem.scss
+++ b/src/components/Drawer/__stories__/ResizableItem.scss
@@ -33,10 +33,20 @@
         overflow-x: hidden;
     }
 
+    &__item_vertical {
+        width: 100%;
+        height: 240px;
+    }
+
     &__item-content {
         box-sizing: border-box;
         padding: 8px 16px;
         height: 100%;
         overflow-y: scroll;
+    }
+
+    &__item_vertical &__item-content {
+        width: 100%;
+        height: auto;
     }
 }
