--- a/src/components/Drawer/__stories__/DisablePortal.scss
+++ b/src/components/Drawer/__stories__/DisablePortal.scss
@@ -32,6 +32,12 @@
         width: 400px;
         height: 100%;
         overflow-x: hidden;
+
+        &_vertical {
+            width: 100%;
+            height: 240px;
+            overflow-y: hidden;
+        }
     }
 
     &__item-content {
@@ -39,5 +45,10 @@
         padding: 8px 16px;
         height: 100%;
         overflow-y: scroll;
+    }
+
+    &__item_vertical &__item-content {
+        height: auto;
+        width: 100%;
     }
 }
