--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -14,6 +14,7 @@ $block: '.#{variables.$ns}logo';
         align-items: center;
         flex-shrink: 0;
         justify-content: center;
+        cursor: pointer;
 
         &,
         &:hover,
