fix(Drawer): fixed vertical drawer and styles (#394)
- fixed issue, when user can select text while dragging drawer
- fixed cursor to `row-resize` for vertical Drawer
- added prop `onResizeContinue` to DrawerItem

(cherry picked from commit 36b1d161a189e8818b43f41411070857ad905d40)

--- a/src/components/Drawer/Drawer.scss
+++ b/src/components/Drawer/Drawer.scss
@@ -204,6 +204,7 @@ $block: '.#{variables.$ns}drawer';
 
         &_direction_top,
         &_direction_bottom {
+            cursor: row-resize;
             width: 100%;
             height: var(--gn-drawer-item-resizer-width, var(--_--resizer-width));
         }
