--- a/src/components/CompositeBar/CompositeBar.scss
+++ b/src/components/CompositeBar/CompositeBar.scss
@@ -12,4 +12,16 @@ $block: '.#{variables.$ns}composite-bar';
     & &__root-menu-item[class] {
         background-color: transparent;
     }
+
+    &__list_hover::after{
+        content: '';
+        position: absolute;
+        inset: 0;
+        border: solid 1px red;
+    }
+
+    &__list:hover > div > div:first-child {
+        transform: translateY(0);
+        outline: solid 2px var(--g-color-line-info);
+    }
 }
