fix: added 8px margin to the "All results" page + fixed the Gear icon

--- a/src/components/Settings/SettingsMenu/SettingsMenu.scss
+++ b/src/components/Settings/SettingsMenu/SettingsMenu.scss
@@ -19,6 +19,10 @@ $block: '.#{variables.$ns}settings-menu';
         }
     }
 
+    &__item + &__group {
+        margin-top: 8px;
+    }
+
     &__item {
         $item: &;
         display: flex;
