fix(MobileHeader): fix top for drawer item

--- a/src/components/MobileHeader/MobileHeader.scss
+++ b/src/components/MobileHeader/MobileHeader.scss
@@ -56,6 +56,10 @@ $block: '.#{variables.$ns}mobile-header';
         overflow: hidden;
     }
 
+    &__panel-item {
+        top: unset;
+    }
+
     &__content {
         overflow: auto;
     }
