--- a/src/components/ActionBar/Group/ActionBarGroup.scss
+++ b/src/components/ActionBar/Group/ActionBarGroup.scss
@@ -13,4 +13,8 @@ $block: '.#{variables.$ns}action-bar-group';
 
     margin: 0;
     padding: 0;
+
+    &_stretch-container {
+        flex-grow: 1;
+    }
 }
