--- a/src/components/ActionBar/Group/ActionBarGroup.scss
+++ b/src/components/ActionBar/Group/ActionBarGroup.scss
@@ -10,8 +10,11 @@ $block: '.#{variables.$ns}action-bar-group';
     flex-flow: row nowrap;
     align-items: center;
     justify-content: flex-start;
-    flex-grow: 1;
 
     margin: 0;
     padding: 0;
+
+    &_stretch-container {
+        flex-grow: 1;
+    }
 }
