--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -16,6 +16,8 @@ $block: '.#{variables.$ns}logo';
         justify-content: flex-start;
         cursor: pointer;
         width: 100%;
+        word-break: break-word;
+        overflow-wrap: break-word;
 
         &,
         &:hover,
@@ -38,5 +40,6 @@ $block: '.#{variables.$ns}logo';
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-shrink: 0;
     }
 }
