--- a/playwright/playwright/index.scss
+++ b/playwright/playwright/index.scss
@@ -1,7 +1,7 @@
-@import '@gravity-ui/uikit/styles/styles.scss';
-@import '@gravity-ui/uikit/styles/fonts.scss';
-@import '../../.storybook/styles.scss';
-@import '../../styles/mixins.scss';
+@use '@gravity-ui/uikit/styles/styles.scss';
+@use '@gravity-ui/uikit/styles/fonts.scss';
+@use '../../.storybook/styles.scss';
+@use '../../styles/mixins.scss';
 
 pre {
     font-family: 'Inter', sans-serif;
