--- a/src/components/HotkeysPanel/HotkeysPanel.scss
+++ b/src/components/HotkeysPanel/HotkeysPanel.scss
@@ -40,7 +40,7 @@ $block: '.#{variables.$ns}hotkeys-panel';
         overflow-y: auto;
     }
 
-    &__item {
+    &__item[class] {
         height: auto;
         padding: var(--g-spacing-2) 0;
         margin: 0 var(--hotkeys-panel-horizontal-padding);
