feat(AsideHeader): bringing to a flat interface for items

--- a/src/components/AsideHeader/components/AllPagesPanel/AllPagesListItem/AllPagesListItem.scss
+++ b/src/components/AsideHeader/components/AllPagesPanel/AllPagesListItem/AllPagesListItem.scss
@@ -1,5 +1,5 @@
-@use '../../variables';
-@use '../../../../styles/mixins';
+@use '../../../../variables';
+@use '../../../../../../styles/mixins';
 
 .#{variables.$ns}all-pages-list-item {
     @include mixins.accessibility-button;
