--- a/src/components/Footer/MenuItem/MenuItem.module.scss
+++ b/src/components/Footer/MenuItem/MenuItem.module.scss
@@ -1,5 +1,6 @@
 @use '~@gravity-ui/uikit/styles/mixins';
 @use '../../variables';
+@use '../../../../styles/mixins' as mixins;
 
 $block: '.#{variables.$ns}footer-menu-item';
 
