--- a/playwright/playwright/index.scss
+++ b/playwright/playwright/index.scss
@@ -1,7 +1,7 @@
-@import '@gravity-ui/uikit/styles/styles.scss';
-@import '@gravity-ui/uikit/styles/fonts.scss';
-@import '../../.storybook/styles.scss';
-@import '../../styles/mixins.scss';
+@use '@gravity-ui/uikit/styles/styles.scss' as *;
+@use '@gravity-ui/uikit/styles/fonts.scss' as *;
+@use '../../.storybook/styles.scss' as *;
+@use '../../styles/mixins.scss' as *;
 
 pre {
     font-family: 'Inter', sans-serif;
