--- a/src/components/MobileHeader/FooterItem/FooterItem.module.scss
+++ b/src/components/MobileHeader/FooterItem/FooterItem.module.scss
@@ -1,5 +1,6 @@
 @use '~@gravity-ui/uikit/styles/mixins';
 @use '../../variables';
+@use '~@gravity-ui/uikit/styles/mixins' as *;
 
 $block: '.#{variables.$ns}mobile-header-footer-item';
 
