--- a/src/components/Settings/SettingsMenu/SettingsMenu.module.scss
+++ b/src/components/Settings/SettingsMenu/SettingsMenu.module.scss
@@ -1,5 +1,6 @@
 @use '~@gravity-ui/uikit/styles/mixins';
 @use '../../variables';
+@use '../../../../styles/mixins' as *;
 
 $block: '.#{variables.$ns}settings-menu';
 
