Unify interfaces items (#470)
* feat(dataui-3285): unify the API for 'sub headerItem', 'menuItem', and 'footer Items'

* feat(dataui-3285): update doc

* fix(dataui-3285): fix errors

* feat(AsideHeader): bringing to a flat interface for items

* feat(AsideHeader): deprecate built-in popup fields in favor of itemWrapper for improved flexibility

* refactor(AsideHeader): rename 'link' to 'href' for consistency across components

* refactor(AsideHeader): remove onCollapseItemClick and update onItemClick documentation for clarity

* feat(MobileHeader): add 'link' property to MobileMenuItem for enhanced navigation

--- a/src/components/AsideHeader/__stories__/AsideHeaderShowcase.scss
+++ b/src/components/AsideHeader/__stories__/AsideHeaderShowcase.scss
@@ -1,4 +1,4 @@
-@import '~@gravity-ui/uikit/styles/mixins';
+@use '../../../../styles/mixins';
 
 body {
     margin: 0;
@@ -6,7 +6,7 @@ body {
 
 .aside-header-showcase {
     &__content {
-        @include text-body-3;
+        @include mixins.text-body-3;
         padding: 40px;
     }
 
@@ -71,7 +71,7 @@ body {
     }
 
     &__item-accent {
-        @include text-accent;
+        @include mixins.text-accent;
         width: 100%;
         height: 100%;
     }
