refactor: replace `@import` -> `@use`

--- a/.storybook/styles.scss
+++ b/.storybook/styles.scss
@@ -1,5 +1,5 @@
-@import '~@doc-tools/transform/dist/css/yfm.css';
-@import '~@gravity-ui/uikit/styles/fonts.scss';
+@use '~@doc-tools/transform/dist/css/yfm.css';
+@use '~@gravity-ui/uikit/styles/fonts.scss';
 
 body {
     padding: 0;
