--- a/src/components/FooterItem/__stories__/FooterItemShowcase.scss
+++ b/src/components/FooterItem/__stories__/FooterItemShowcase.scss
@@ -1,10 +1,10 @@
-@import '../../../../styles/mixins';
+@use '~@gravity-ui/uikit/styles/mixins';
 
 .footer-item-showcase {
     --gn-aside-header-min-width: 56px;
 
     &__content {
-        @include text-body-3;
+        @include mixins.text-body-3;
         padding: 40px;
     }
 }
