--- a/src/components/Settings/SettingsMenu/SettingsMenu.scss
+++ b/src/components/Settings/SettingsMenu/SettingsMenu.scss
@@ -1,13 +1,12 @@
+@use '~@gravity-ui/uikit/styles/mixins';
 @use '../../variables';
-
-@import '../../../../styles/mixins';
 
 $block: '.#{variables.$ns}settings-menu';
 
 #{$block} {
     &__group {
         &-heading {
-            @include text-accent;
+            @include mixins.text-accent;
             display: inline-block;
             padding: 0 20px;
             margin-bottom: 12px;
