--- a/.storybook/styles.scss
+++ b/.storybook/styles.scss
@@ -1,4 +1,4 @@
-@use '~@doc-tools/transform/dist/css/yfm.css';
+@use '~@doc-tools/transform/dist/css/yfm';
 @use '~@gravity-ui/uikit/styles/fonts.scss';
 
 body {
