--- a/src/components/AsideHeader/__stories__/AsideHeaderShowcase.scss
+++ b/src/components/AsideHeader/__stories__/AsideHeaderShowcase.scss
@@ -82,10 +82,16 @@ body {
         width: 300px;
         height: calc(100% - 40px);
         padding: 20px;
+        overflow-y: auto;
     }
 
     &__custom-background {
         opacity: 70%;
+    }
+
+    &__user-settings-content {
+        height: 2000px;
+        background: linear-gradient(to bottom, #fff700, #ff0000);
     }
 }
 
