--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -195,6 +195,44 @@ $block: '.#{variables.$ns}aside-header';
         flex-grow: 1;
     }
 
+    &__menu-items {
+        left: var(--g-spacing-7);
+        position: relative;
+        border-left: 1px solid var(--g-color-line-generic);
+    }
+
+    &__menu-group {
+        padding: var(--g-spacing-2) 0;
+
+        &:not(:last-child) {
+            border-bottom: 1px solid var(--g-color-line-generic);
+        }
+    }
+
+    &__menu-group-header {
+        display: flex;
+        align-items: center;
+        gap: var(--g-spacing-2);
+        padding: var(--g-spacing-2) var(--g-spacing-5);
+    }
+
+    &__menu-group-toggle,
+    &__menu-group-toggle-placeholder {
+        width: 24px;
+        height: 24px;
+        display: inline-flex;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    &__menu-group-toggle {
+        margin-left: auto;
+    }
+
+    &__menu-group-icon {
+        margin-right: var(--g-spacing-3);
+    }
+
     &__footer {
         flex-shrink: 0;
         width: 100%;
