--- a/src/components/AsideHeader/components/CompositeBar/CompositeBar.scss
+++ b/src/components/AsideHeader/components/CompositeBar/CompositeBar.scss
@@ -25,4 +25,36 @@ $block: '.#{variables.$ns}composite-bar';
             display: none;
         }
     }
+
+    &__menu-group {
+        padding: var(--g-spacing-2) 0;
+
+        &:not(:last-child) {
+            border-bottom: 1px solid var(--g-color-line-generic);
+        }
+    }
+
+    &__menu-group-header {
+        display: flex;
+        align-items: center;
+        gap: var(--g-spacing-2);
+        padding: var(--g-spacing-2) var(--g-spacing-5);
+    }
+
+    &__menu-group-toggle,
+    &__menu-group-toggle-placeholder {
+        width: 24px;
+        height: 24px;
+        display: inline-flex;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    &__menu-group-toggle {
+        margin-left: auto;
+    }
+
+    &__menu-group-icon {
+        margin-right: var(--g-spacing-3);
+    }
 }
