--- a/src/components/AsideHeader/components/CompositeBar/CompositeBar.scss
+++ b/src/components/AsideHeader/components/CompositeBar/CompositeBar.scss
@@ -34,6 +34,14 @@ $block: '.#{variables.$ns}composite-bar';
         }
     }
 
+    &__menu-group-items {
+        &_grouped {
+            left: var(--g-spacing-7);
+            position: relative;
+            border-left: 1px solid var(--g-color-line-generic);
+        }
+    }
+
     &__menu-group-header {
         padding: var(--g-spacing-2) var(--g-spacing-5);
     }
