feat: sort group and group items

--- a/src/components/AsideHeader/components/AllPagesPanel/AllPagesPanel.scss
+++ b/src/components/AsideHeader/components/AllPagesPanel/AllPagesPanel.scss
@@ -11,6 +11,10 @@
         flex: 1;
 
         margin: 0 calc(var(--g-spacing-6) * -1);
+
+        &_edit-mode {
+            padding-left: var(--g-spacing-6);
+        }
     }
 
     &__category {
@@ -33,6 +37,8 @@
     }
 
     &__groups-container {
+        width: 100%;
+
         &:not(:last-child) {
             padding-bottom: var(--g-spacing-2);
             border-bottom: 1px solid var(--g-color-line-generic);
