fix(MobileHeader): set height to 100% for panel items and include burger menu class name

--- a/src/components/MobileHeader/MobileHeader.scss
+++ b/src/components/MobileHeader/MobileHeader.scss
@@ -58,6 +58,7 @@ $block: '.#{variables.$ns}mobile-header';
 
     &__panel-item {
         top: unset;
+        height: 100%;
     }
 
     &__content {
