feat(Settings.Item): add the ability to hide item title

--- a/src/components/Settings/Settings.scss
+++ b/src/components/Settings/Settings.scss
@@ -183,6 +183,10 @@ $block: '.#{variables.$ns}settings';
         grid-template-columns: 216px 1fr;
         justify-items: start;
 
+        &_title_hide {
+            grid-template-columns: 1fr;
+        }
+
         &_align_top {
             align-items: start;
         }
