--- a/src/components/MobileHeader/__stories__/MobileHeaderShowcase.scss
+++ b/src/components/MobileHeader/__stories__/MobileHeaderShowcase.scss
@@ -1,4 +1,4 @@
-@use '~@gravity-ui/uikit/styles/mixins';
+@import '../../../../styles/mixins';
 
 body {
     margin: 0;
@@ -6,7 +6,7 @@ body {
 
 .mobile-header-demo {
     &__content {
-        @include mixins.text-body-3;
+        @include text-body-3;
         padding: 40px;
     }
 
@@ -40,13 +40,13 @@ body {
     }
 
     &__item-accent {
-        @include mixins.text-accent;
+        @include text-accent;
         width: 100%;
         height: 100%;
     }
 
     &__modal-footer {
-        @include mixins.text-body-2;
+        @include text-body-2;
         display: flex;
         align-items: center;
         justify-content: center;
