--- a/src/components/FooterItem/__stories__/FooterItemShowcase.scss
+++ b/src/components/FooterItem/__stories__/FooterItemShowcase.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/mixins';
+@import '~@gravity-ui/uikit/styles/mixins';
 
 .footer-item-showcase {
     --gn-aside-header-min-width: 56px;
