refactor: replace `@import` -> `@use` in sources (#477)

--- a/src/components/AsideHeader/components/FooterItem/__stories__/FooterItemShowcase.scss
+++ b/src/components/AsideHeader/components/FooterItem/__stories__/FooterItemShowcase.scss
@@ -1,4 +1,4 @@
-@use '../../../../../../styles/mixins';
+@use '~@gravity-ui/uikit/../../styles/mixins';
 
 .footer-item-showcase {
     --gn-aside-header-min-width: 56px;
