--- a/src/components/Settings/Settings.scss
+++ b/src/components/Settings/Settings.scss
@@ -185,7 +185,7 @@ $block: '.#{variables.$ns}settings';
 
         &_title_hide {
             grid-template-columns: 1fr;
-            justify-item: normal;
+            justify-items: normal;
         }
 
         &_align_top {
