--- a/src/components/AsideHeader/components/CompositeBar/CompositeBar.scss
+++ b/src/components/AsideHeader/components/CompositeBar/CompositeBar.scss
@@ -10,9 +10,20 @@ $block: '.#{variables.$ns}composite-bar';
     min-height: 40px;
     display: flex;
     flex-direction: column;
+    --gn-aside-header-item-expanded-radius: 6px;
 
     & &__root-menu-item[class] {
         background-color: transparent;
+    }
+
+    &__menu-group-item,
+    &__menu-group-header,
+    & &__root-menu-item[class] {
+        margin-bottom: 2px;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 
     &_scrollable {
@@ -28,22 +39,42 @@ $block: '.#{variables.$ns}composite-bar';
 
     &__menu-group {
         width: 100%;
-    }
+        position: relative;
 
-    &__menu-group-items {
-        &_grouped {
-            margin-left: var(--g-spacing-7);
-            position: relative;
-            border-left: 1px solid var(--g-color-line-generic);
+        &:before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            border-left: 2px solid var(--g-color-line-generic);
+            border-radius: 0;
+            transition: border-radius 0.15s ease-out;
+        }
+
+        &:hover,
+        &_expanded {
+            &:before {
+                border-radius: var(--gn-aside-header-item-expanded-radius);
+            }
         }
     }
 
+    &__menu-item,
+    &__menu-group {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    &__menu-group-header,
     &__menu-group-item {
-        height: 40px;
+        height: 36px;
     }
 
     &__menu-group-header {
-        padding: var(--g-spacing-2) var(--g-spacing-5);
+        padding: var(--g-spacing-2) 0;
     }
 
     &__menu-group-toggle,
