--- a/src/components/AsideHeader/components/FooterItem/FooterItem.scss
+++ b/src/components/AsideHeader/components/FooterItem/FooterItem.scss
@@ -6,5 +6,7 @@ $block: '.#{variables.$ns}footer-item';
     $class: &;
 
     width: 100%;
-    height: 40px;
+    height: 36px;
+
+    margin: 0 var(--g-spacing-2);
 }
